--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Collaberotica Devlog # site title
 description: >- # site description
-  Collaberotica. Devlog.
+  Collaberotica news
 lang: en-US # default lang
 timezone: America/New_York # set your timezone
-image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
+image: assets/img/logo.png # This image used for Open Graph more info https://ogp.me/
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
@@ -15,8 +15,6 @@ author:
   avatar: /assets/img/final_transparent.png # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
-baseurl: 
 permalink: /:title/
 
 # Collection setting
