--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Collaberotica Devlog # site title
+title: Collaberotica News # site title
 description: >- # site description
   Collaberotica news
 lang: en-US # default lang
